AC_PREREQ([2.65])
AC_INIT([jstools], [1.0.0], [aubin.mahe@wanadoo.fr])
AC_CONFIG_SRCDIR([src/JST_load.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIRS([m4])
AC_PROG_CC
AC_CHECK_HEADERS([ctype.h inttypes.h stddef.h stdio.h stdlib.h string.h sys/stat.h])
AC_CHECK_HEADER_STDBOOL
AC_TYPE_INT64_T
AC_TYPE_SIZE_T
AC_CHECK_FUNCS([bsearch calloc free fopen fread memmove qsort realloc strchr strdup strtod strtok strcmp strncmp strerror strtod strtoll strtoul stat])
AC_FUNC_REALLOC
AC_FUNC_STRTOD
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_CONFIG_FILES([Makefile])
AM_INIT_AUTOMAKE([subdir-objects])
LT_INIT
AC_OUTPUT
